# haskell-reference

./: LICENSE  README.md  README.org
example-setup/: example-setup.cabal
example-setup-lib/: .gitignore  example-setup.cabal
example-setup-with-tasty/: example-setup.cabal
example-setup-with-tasty/app/: Main.hs
example-setup-with-tasty/test/: HelloTest.hs  Specs.hs
example-setup-with-tests/: example-setup.cabal
example-setup-with-tests/src/: Lib.hs
example-setup-with-tests/test/: HelloTest.hs  Specs.hs
example-setup/app/: Main.hs
