cabal-version: 2.4
name:          example-setup
version:       0.1.0.0

executable example-setup
    -- Pointing to the main entry point
    main-is: Main.hs

    -- Depends on base package
    build-depends: base ^>=4.14.3.0

    -- Language version
    default-language: Haskell2010

    -- Dir with our source
    hs-source-dirs:   app
    
